--- a/_pages/0001.md
+++ b/_pages/0001.md
@@ -8,7 +8,7 @@ comments: true
 
 <div class="jontor" loading="lazy">
 <script src="https://rawgit.com/rezamuhamad/rakinfo/master/sitemap.js"></script>
-<script src="xselebgram.xyz/feeds/posts/default/?start-index=2530&max-results=10&amp;alt=json-in-script&amp;callback=rak_info_Load"></script>
+<script src="https://xselebgram.xyz/feeds/posts/default/?start-index=2530&max-results=10&amp;alt=json-in-script&amp;callback=rak_info_Load"></script>
 </div>
 
 
