--- a/_pages/0001.md
+++ b/_pages/0001.md
@@ -5,31 +5,12 @@ permalink: /downloadvideo01
 comments: true
 ---
 
-<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';"></a><span id="spoiler_id" style="display: none;"><a class="link" onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';"></a>
-
-<div style="background-color: rgba(0, 0, 0, 0); margin: 1px;">
-
-<div class="smallfont">_<span style="font-size: 16px; font-weight: bold; margin-right: 3px;"></span>_<input onclick="if (this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != '') { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = ''; this.innerText = ''; this.value = 'Hide'; } else { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value = 'new posts'; }" style="background-color: #00000000; font-size: 16px; width: auto;" type="button" value="new posts"></div>
-
-<div class="alt2" style="background-color: rgba(255, 255, 255, 0); margin: 0px; padding: 0px;">
-
-<div style="display: none;" loading="lazy">
-  
-
-
-<div style="display: none;" loading="lazy">
+<details><summary>.</summary>
 <div class="jontor" loading="lazy">
 <script src="https://rawgit.com/rezamuhamad/rakinfo/master/sitemap.js"></script>
 <script src="https://xselebgram.xyz/feeds/posts/default/?start-index=2530&max-results=10&amp;alt=json-in-script&amp;callback=rak_info_Load"></script>
 </div>
-
-</div>
-
-</div>
-
-</div>
-
-</span>
+</details>
 
 
   
